adjusted the lines that performed uncertain before in chrome when zooming in and out. Fixed the bug when porting from django template to js dict with linebreaksbr. Added some classes to the css for post, so I can center images, and standardize the hr lines. word-break isn't supported in firefox, so now use overflow-wrap which should work on both.

--- a/philo-b/philo-b/static/css/base.css
+++ b/philo-b/philo-b/static/css/base.css
@@ -34,6 +34,11 @@ body {
 	margin: 0 10% 30px;
 }
 
+.separator-header {
+	border-top: thin solid #686868;
+	border-bottom: 0;
+}
+
 .login-status {
 	text-align: right;
 	margin: 0 15% 0 0;
